# Nearl

./: .gitignore  .readthedocs.yaml  .rec.pdb.swp  .tmp.txt.swp  .token.txt  .trajLigand.mol2.swp  AfterPrep_108_142.csv  CONFIG.json  Caliberate_MolBlock_Viewpoint.ipynb  Contact_Nr.ipynb  Contact_number_Embedding_factor.ipynb  Data_IO.ipynb  Gaussian_filter.ipynb  Hilbert_Curve.ipynb  INDEX_SEL_DATA.csv  MANIFEST.in  Makefile  Morvan_PyTorch.ipynb  Network_3D_CNN.ipynb  Packages_explicit.txt  Points.ipynb  Points_generation_geometric_parm.ipynb  README.md  README.rst  Submit_MDSimulation.ipynb  Submit_preparation.ipynb  Test_3D_conv.ipynb  Test_FFT.ipynb  Test_Hilbert.ipynb  Test_pytorch.ipynb  __init__.py  align_cpptraj.cmd  build_dev.sh  chemtools.py  cluster.py  clusterpdb.py  create_env.yml  data_io.py  example_lig.xml  features.py  (+25 more)
.github/workflows/: python-package.yml
BetaPose/: __init__.py  chemtools.py  data_io.py  utils.py
BetaPose/features/: features.py  featurizer.py
BetaPose/io/: trajloader.py
BetaPose/models/: models.py
BetaPose/static/: __init__.py
BetaPose/tests/: test.py  test3.py  test4.py
BetaPose/utils/: cluster.py  view.py
C003XiF0sMZh/: C003XiF0sMZh_ATJ.mol2  C003XiF0sMZh_LIG.mol2  C003XiF0sMZh_LOG.txt  C003XiF0sMZh_PRM.txt  C003XiF0sMZh_SEQ.seq  Rerun_C003XiF0sMZh.slurm  al.key  al.set
Forcefield/: test_wat.xml
data/: PDBBind_general_v2020.csv  PDBBind_refined_v2020.csv  casf2016_test.txt  misato_test.txt  misato_train.txt  misato_train_with_ligand.txt  pdbbind_to_csv.py
data/MD_PREP/: AfterMDPrep_108_142.csv
docs/: paper.bib  paper.md
docs/source/: conf.py  index.rst  install_prereq.rst  install_steps.rst  install_valid.rst  installation.rst  intro_dynfeat.rst  intro_visual.rst  modules_commands.rst  modules_features.rst  modules_featurizer.rst  modules_traj.rst  modules_trajloader.rst  nearl_doc.rst  quick_start.rst  sphinx_requirements.txt  sphinx_requirements.yml  tutorial1.rst  tutorial2.rst  tutorial3.rst  tutorial4.rst  tutorial5.rst  tutorial6.rst  tutorial_tba.rst  tutorials.rst
docs/source/_static/: quick_start.py  static_pdb_featurization.py  tutorial1_feature_customize.py  tutorial2_customize_traj.py
msms_i86_64Linux2_2.6.1/: pdb_to_xyzr  test.a.xyzn  test_output.face  test_output.vert  test_output.xyzr
nearl/: __init__.py  chemtools.py  commands.py  constants.py  features.py  featurizer.py  fingerprint.py  myconfig.json  utils.py  valid_installation.py  visual.py
nearl/data/: __init__.py
nearl/features/: __init__.py  features.py  featurizer.py  fingerprint.py
nearl/io/: __init__.py  dataset.py  hdf5.py  misc.py  traj.py  trajloader.py
nearl/models/: __init__.py  model_atom3d.py  model_deeprank.py  model_gnina.py  model_kdeep.py  model_pafnucy.py  model_resnet3d.py  model_rfscore.py  model_voxnet.py  models.py  models_jax.py  models_torch.py
nearl/static/: __init__.py
nearl/tests/: __init__.py  featurize_pdbbind_subset.py  open3d_func.py  test.py  test2.py  test_actions.py  test_features.py  test_trajectory.py  test_visualization.py  training_jax.py  vectorize.py
nearl/utils/: __init__.py  chemtools.py  draw.py  other.py  session_prep.py  transform.py  utils.py  view.py
notebooks/: ACGUIKit.ipynb  Build_Database.ipynb  Evaluations.ipynb  FeatureBlockRepresentation.ipynb  Generate_Gridpoints.ipynb  Label_DataSet.ipynb  Language.ipynb  Metric_calibration.ipynb  PDBBind_selection.ipynb  Pairwise_distance.ipynb  Selenium_Submission.ipynb  Test_clustering.ipynb  Test_selenium.ipynb  confusion_matrix_retrieval.ipynb  self_similarity_matrix.npy
pytests/: test_actions.py  test_benchmark.py  test_features.py  test_visualization.py
scripts/: align_trajectories.sh  benchmark_datafile.py  benchmark_datagen.py  benchmark_misatofeat.py  coord_grid_viewer.py  correct_molfile.py  create_env.sh  create_env_mamba.sh  depth_coloring.py  evaluation_single_residue_retrieval.py  example_objrotation.ply  example_objrotation.py  example_vector_to_eulerangle.py  extended_gaussian_image.py  featurize_misato.py  featurize_pdbbind.py  featurize_to_hilbert.py  featurize_trajectory.py  install_mamba.sh  plot_performance.py  prepare_data.py  prepare_misato.py  prepare_pdbbind.py  prepare_rotated_structure.py  prepare_scalar.py  prepare_single_residue.py  prepare_single_residue_traj.py  prepare_trajectories.sh  prepare_trajectory.py  preprocess_misato_data.py  residue_dynamic_generation.py  residue_static_generation.py  restype_prediction.py  rotation_pcdobject.py  rotation_structure.py  run_on_eiger.slurm  standardizer_generation.py  standardizer_generation_by_residue.py  standardizer_generation_by_residue_MP.py  structure_rotation.py  (+15 more)
scripts/misc/: create_env.sh  create_env_mamba.sh  dataset_splition.ipynb  install_mamba.sh
scripts/slurm/: benchmark_datagen.slurm  benchmark_misato.slurm  featurize_inhouse75.slurm  featurize_misato.slurm  featurize_pdbbind.slurm  prepare_static_test1.slurm  run_training_static_feature.slurm  train_models.slurm  train_static_test1.slurm
scripts/training/: train_2DCNN.py  train_gaussian_process_Jax.py  train_model_misato.py  train_pafnucy.py  train_random_forest.py  train_simple_network.py  train_simple_network_Jax.py  train_voxnet_test1.py
src/: CMakeLists.txt  Makefile  actions_py.cpp  baseutils.cpp  baseutils.cu  baseutils.cuh  baseutils.h  compile_all.sh  constants.h  cos_sim.cpp  cos_sim.cu  cpuutils.cpp  cpuutils.h  cutils.cpp  gpuutils.cu  gpuutils.cuh  icp.cpp  icp.h  interpolate.cpp  interpolate.cu  marching_observers.cu  marching_observers.cuh  marching_observers_py.cpp  pybind_template.cpp  similarity.cu  similarity.cuh  similarity_py.cpp  surface.cpp  test_actions.py  test_surf.cpp  testall.sh  testicp.cpp  voxelize.cu  voxelize.cuh
tests/: __init__.py  featurizer_test1_lig.str  test.ply  test.py
