[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "nearl"  # as it would appear on PyPI
version = "0.0.1"
description = "Nearl Package Installation"
authors = [
    {name = "Yang Zhang", email = "y.zhang@bioc.uzh.ch"},
]
dependencies = [
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
include-package-data = true

[project.scripts]

