[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "nearl"  # as it would appear on PyPI
version = "0.0.1"
description = "Nearl Package Installation"
authors = [
    {name = "Yang Zhang", email = "y.zhang@bioc.uzh.ch"},
]
# Reconsider dependencies when publishing the package
# Ambertools and Openbabel should be installed separately
dependencies = [
    "numpy (>=1.24, <2.0)",
    "h5py",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
include-package-data = true


[project.entry-points.console_scripts]
nearl-view-slice = "nearl.visual:CLI_view_slice"
nearl-view-voxel = "nearl.visual:CLI_view_voxel"
